# PokemonClone

./: .gitignore  CMakeLists.txt  README.md  main.cpp
colliders/: Collider.h
game_objects/: Character.cpp  Character.h  GameObject.cpp  GameObject.h  MainCharacter.cpp  MainCharacter.h  TestObject.cpp  TestObject.h
maps/: Map.cpp  Map.h
resources/maps/gimp/: route1.xcf  vermillion.xcf
settings/: Settings.h
